--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -8,9 +8,17 @@ on:
 jobs:
   test:
     runs-on: ubuntu-18.04
+    strategy:
+      matrix:
+        ruby: [ '2.2', '2.5' ]
+    name: Ruby ${{ matrix.ruby }} sample
     steps:
     - name: Check out repository
-      uses: actions/checkout@v2    
+      uses: actions/checkout@v2 
+    - name: Set up Ruby
+      uses: actions/setup-ruby@v1
+      with:
+        ruby-version: ${{ matrix.ruby }}
     - name: Run Tests
       run: |
         bundle update
