--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -10,8 +10,8 @@ jobs:
     runs-on: ubuntu-18.04
     strategy:
       matrix:
-        ruby: [ '2.2', '2.5' ]
-    name: Ruby ${{ matrix.ruby }} sample
+        ruby: [ '2.4', '2.5' ]
+    name: Ruby ${{ matrix.ruby }} Tests
     steps:
     - name: Check out repository
       uses: actions/checkout@v2 
