--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -4,19 +4,19 @@ on:
   pull_request:
     branches:
       - master
-      
+
 jobs:
   test:
     runs-on: ubuntu-18.04
     strategy:
       matrix:
-        ruby: [ '2.4', '2.5' ]
+        ruby: [ '2.5', '2.7' ]
     name: Ruby ${{ matrix.ruby }} Tests
     steps:
     - name: Check out repository
-      uses: actions/checkout@v2 
+      uses: actions/checkout@v2
     - name: Set up Ruby
-      uses: actions/setup-ruby@v1
+      uses: ruby/setup-ruby@v1
       with:
         ruby-version: ${{ matrix.ruby }}
     - name: Run Tests
