--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -7,10 +7,10 @@ on:
 
 jobs:
   test:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-22.04
     strategy:
       matrix:
-        ruby: [ '2.5', '2.7' ]
+        ruby: [ '2.5', '2.7', '3.0', '3.1' ]
     name: Ruby ${{ matrix.ruby }} Tests
     steps:
     - name: Check out repository
